--- a/JS courses/JS Back-End/4-Workshop- ExpressJS and Templating/demo/package.json
+++ b/JS courses/JS Back-End/4-Workshop- ExpressJS and Templating/demo/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^7.1.2"
+    "express-handlebars": "^7.1.2",
+    "mongoose": "^7.4.3",
+    "uniqid": "^5.4.0"
   }
 }
