--- a/JS courses/JS Back-End/8-Workshop-Session and Authentication/demo/package.json
+++ b/JS courses/JS Back-End/8-Workshop-Session and Authentication/demo/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mongoose": "^7.4.3",
