--- a/JS courses/JS Back-End/8-Workshop-Session and Authentication/demo/package.json
+++ b/JS courses/JS Back-End/8-Workshop-Session and Authentication/demo/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
     "uniqid": "^5.4.0"
   }
