--- a/JS courses/JS Back-End/exam-prep/first demo/demo/package.json
+++ b/JS courses/JS Back-End/exam-prep/first demo/demo/package.json
@@ -16,6 +16,7 @@
     "D": "^1.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
     "nodemon": "^3.0.1"
   }
