--- a/TypeScript/TS EXAM/3-vendingMachine/tsconfig.json
+++ b/TypeScript/TS EXAM/3-vendingMachine/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "target": "ES2022"
+    "target": "ES2022",
+    "module": "CommonJS",
   }
 }
